--- a/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
+++ b/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
@@ -1189,8 +1189,7 @@
         "print(f\"adjectives ({len(adjectives)}): {adjectives}\")\n"
       ],
       "metadata": {
-        "id": "gspdJaa4JI-a",
-        "cellView": "form"
+        "id": "gspdJaa4JI-a"
       },
       "execution_count": null,
       "outputs": []
@@ -1682,7 +1681,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "9DPcgVl5BBdA"
+        "id": "9DPcgVl5BBdA",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -1718,7 +1718,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "zgQGyRlY9cBN"
+        "id": "zgQGyRlY9cBN",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -1748,7 +1749,7 @@
         "id": "EY_quiwAY457"
       },
       "source": [
-        "# Core Prompt Functions (always required)"
+        "# Core Prompt Functions (always required). Also, rerun after getting final prompt votes (Step 1c)"
       ]
     },
     {
@@ -2002,7 +2003,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Sample Exploration (GPU required)\n",
+        "#@title 1a. Sample Exploration (GPU required)\n",
         "\n",
         "from IPython import display\n",
         "\n",
@@ -2118,7 +2119,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Prompt Voting (CPU only, restart to save credits)\n",
+        "#@title 1b. Prompt Voting (CPU only, restart to save credits)\n",
         "\n",
         "\n",
         "#@markdown 1. this will show you each image created\n",
@@ -2126,6 +2127,7 @@
         "#@markdown 1. (d)elete: the prompts/parameters will be **less likely** to be used in the next round\n",
         "#@markdown 1. (s)kip: the prompts/parameters will be **more likely** to be used in the next round, but it's not quite good enough to use for other lines\n",
         "#@markdown 1. (k)eep: the prompts/parameters will be **less likely** to be used in the next round, but the current image is really interesting\n",
+        "#@markdown 1. (q)uit: no files are moved until the end, or until you quit.  So do this to save your work, then just re-run the cell.\n",
         "\n",
         "#@markdown **NOTE:** This can sometimes produce all-black images.  Not sure why (safety checker?) but just mark them (d)elete.\n",
         "\n",
@@ -2271,7 +2273,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title get the final prompt votes (run after each prompt voting)\n",
+        "#@title 1c. get the final prompt votes (run after each prompt voting)\n",
         "\n",
         "\n",
         "from pathlib import Path\n",
@@ -3512,7 +3514,8 @@
         "\n"
       ],
       "metadata": {
-        "id": "bPeV1vryziKX"
+        "id": "bPeV1vryziKX",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
