more ways to reduce token count

--- a/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
+++ b/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
@@ -1948,6 +1948,13 @@
         "        # get rid of the last item\n",
         "        removed = cur_core_prompt_dict['adverbs'].pop()\n",
         "        print(f\"{token_count}: removed from adverbs: {removed}\")\n",
+        "      elif len(cur_core_prompt_dict['artists']) > 0:\n",
+        "        # do these third if still too long\n",
+        "        # get rid of the last item\n",
+        "        removed = cur_core_prompt_dict['artists'].pop()\n",
+        "        print(f\"{token_count}: removed from artists: {removed}\")\n",
+        "      else:\n",
+        "        raise ValueError(f\"token_count {token_count} is still too long\")\n",
         "\n",
         "  return out_prompt\n",
         "\n",
