--- a/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
+++ b/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
@@ -37,6 +37,7 @@
         "3.   The next set of images is more likely to have those desirable parameters and prompts.  \n",
         "    1. A file 'prompt_gain.pkl' in the project directory will contain all the information needed to do this.\n",
         "    1. NOTE: if you like to use artists, place a simple text file, one artist per line, in the project directory and name it 'artists.txt'\n",
+        "        1. The project directory you name below will be created the first time you run the cell 'Path Setup' below.\n",
         "    1. NOTE: you can buy a full list of over 3500 artists here: https://ko-fi.com/s/aac811be1a, or 200 photographers here: https://ko-fi.com/s/95baf9d581\n",
         "4.   Repeat step 2-3 until you have enough accepted images\n",
         "    1. about 200 in my experience if you need to get 20 lines all in the same style\n",
@@ -575,7 +576,7 @@
         "1. Open the cells to add/change\n",
         "\n",
         "1. Feel completely free to add, or comment out (put a # in front of) any of these to focus the generation of images.\n",
-        "1. just have \"\\_\" if you don't want it used, or add \"\\_\" if want to option for this type of prompt to be blank\n",
+        "1. just have \"\\_\" if you don't want it used, or add \"\\_\" if want the option for this type of prompt to be blank\n",
         "1. If you want to include artists, make sure there is a file 'artists.txt' in the PROJECT_PATH"
       ]
     },
@@ -2132,7 +2133,7 @@
         "#@markdown 1. this will show you each image created\n",
         "#@markdown 1. (a)ccept: the prompts/parameters will be **more likely** to be used in the next round\n",
         "#@markdown 1. (d)elete: the prompts/parameters will be **less likely** to be used in the next round\n",
-        "#@markdown 1. (s)kip: the prompts/parameters will be **more likely** to be used in the next round, but it's not quite good enough to use for other lines\n",
+        "#@markdown 1. (s)kip: the prompts/parameters will be **more likely** to be used in the next round, but this particular image is not quite good enough to be used\n",
         "#@markdown 1. (k)eep: the prompts/parameters will be **less likely** to be used in the next round, but the current image is really interesting\n",
         "#@markdown 1. (q)uit: no files are moved until the end, or until you quit.  So do this to save your work, then just re-run the cell.\n",
         "\n",
