use PIL instead of plt for sequence voting

--- a/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
+++ b/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
@@ -2560,8 +2560,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "5owwhP6kOUEf",
-        "cellView": "form"
+        "id": "5owwhP6kOUEf"
       },
       "outputs": [],
       "source": [
@@ -2583,7 +2582,7 @@
         "#@markdown if true, start from SeqAccepted, change to True after the first round of sequence voting\n",
         "second_round_or_more = False #@param{type:\"boolean\"}\n",
         "\n",
-        "kill_when_done = True #@param{type:\"boolean\"}\n",
+        "kill_when_done = False #@param{type:\"boolean\"}\n",
         "\n",
         "#@markdown much faster if you don't show images\n",
         "show_images = False #@param{type:\"boolean\"}\n",
@@ -2629,27 +2628,17 @@
         "\n",
         "print(f\"accepted files ({len(accepted_files)}): {accepted_files}\")\n",
         "\n",
+        "# YOU MUST CHANGE THESE NUMBERS TO REFLECT THE DIFFICULTY ORDER\n",
         "# to minimize sequence testing\n",
         "# take these from the final prompt votes\n",
-        "#  3: 0.000 /    6 :: Came tripping by; but in her maiden hand\n",
-        "#  6: 0.000 /    5 :: And so the general of hot desire\n",
-        "# 11: 0.000 /    5 :: For men diseased; but I, my mistress' thrall,\n",
-        "# 13: 0.000 /    5 :: Love's fire heats water, water cools not love.\n",
+        "\n",
         "#  0: 0.143 /    7 :: The little love-god lying once asleep\n",
         "#  1: 0.143 /    7 :: Laid by his side his heart-inflaming brand,\n",
-        "#  5: 0.200 /    5 :: Which many legions of true hearts had warm'd;\n",
-        "#  7: 0.200 /    5 :: What sleeping by a virgin hand disarm'd.\n",
-        "#  8: 0.200 /    5 :: This brand she quenched in a cool well by,\n",
-        "# 10: 0.200 /    5 :: Growing a bath and healthful remedy\n",
-        "# 12: 0.200 /    5 :: Came there for cure, and this by that I prove,\n",
-        "#  2: 0.333 /    6 :: Whilst many nymphs that vow'd chaste life to keep\n",
-        "#  4: 0.333 /    6 :: The fairest votary took up that fire\n",
-        "#  9: 0.400 /    5 :: Which from Love's fire took heat perpetual,\n",
+        "\n",
         "\n",
         "lines_in_difficulty_order = [\n",
-        "  3,6,11,13,\n",
-        "  0,1,5,7,\n",
-        "  8,10,12,2,4,9\n",
+        "\n",
+        "  0,1,\n",
         "\n",
         "]\n",
         "\n",
@@ -2819,8 +2808,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8yXzbMOBU4Cl",
-        "cellView": "form"
+        "id": "8yXzbMOBU4Cl"
       },
       "outputs": [],
       "source": [
@@ -2836,25 +2824,19 @@
         "#@markdown 1. NOTE: it may take a second for the input field to show up after the images\n",
         "#@markdown 1. NOTE: look for results in `PROJECT_PATH/Sequences`\n",
         "\n",
-        "# show them to the user, if not in the file\n",
-        "# set A, S, D (accept, skip, delete) assessments\n",
         "\n",
         "from IPython.core.interactiveshell import StrDispatch\n",
-        "import csv\n",
+        "\n",
         "from pathlib import Path\n",
         "import glob\n",
-        "import cv2\n",
-        "from matplotlib import pyplot as plt\n",
         "import time\n",
         "import os\n",
         "import json\n",
-        "import imageio\n",
-        "# !pip install pygifsicle\n",
-        "# from pygifsicle import optimize\n",
         "from IPython.core.interactiveshell import InteractiveShell\n",
         "InteractiveShell.ast_node_interactivity = \"all\"\n",
         "from IPython import display\n",
-        "\n",
+        "from collections import defaultdict\n",
+        "from PIL import Image, ImageFont, ImageDraw\n",
         "\n",
         "def get_lines_from_path(path):\n",
         "  # lines_to_use = [14, 2, 15, 11]\n",
@@ -2868,8 +2850,7 @@
         "  line_numbers = settings.line_numbers\n",
         "\n",
         "  # the images are shown in original line order\n",
-        "  # so we need to reorder the\n",
-        "  # need to re-order the prompts\n",
+        "  # so we need to reorder them\n",
         "\n",
         "  ordered_lines = sorted(line_numbers)\n",
         "  out_titles = []\n",
@@ -2881,86 +2862,76 @@
         "  return out_titles\n",
         "\n",
         "\n",
+        "def image_grid_list(file_list, titles, max_height=720, title_replacements=[]):\n",
         "\n",
-        "def plot_images(img_files, titles, rows=4, columns=4, title_replacements=[]):\n",
-        "  imgs = []\n",
+        "  row2imgs = defaultdict(list)\n",
         "\n",
-        "  if len(img_files) < 4:\n",
-        "    columns = len(img_files)\n",
-        "    rows = 1\n",
-        "\n",
-        "  if len(img_files) > 16:\n",
-        "    rows = 1+ len(img_files) // columns\n",
-        "\n",
-        "  for f in img_files:\n",
-        "    img = cv2.cvtColor(cv2.imread(f), cv2.COLOR_BGR2RGB)\n",
-        "    # img = cv2.imread(str(f))\n",
-        "    imgs.append(img)\n",
-        "\n",
-        "  # #plt.rcParams[\"figure.figsize\"] = (20,3)\n",
-        "  # # create figure in inches\n",
-        "  # # fig = plt.figure(figsize=(30, 20)) #  works for 512H x 768W\n",
-        "  # if len(img_files) == 2:\n",
-        "  #   fig = plt.figure(figsize=(30, 8)) #  works for 512 x 960 and 2 images\n",
-        "  # elif len(img_files) == 4:\n",
-        "  #   fig = plt.figure(figsize=(30, 17)) #  works for 512 x 960 and 4 images\n",
-        "  # elif len(img_files) > 12:\n",
-        "  #   fig = plt.figure(figsize=(30, 20)) #  works for 512 x 960 and 4 images\n",
-        "  # else:\n",
-        "  #   fig = plt.figure(figsize=(30, 17)) #  works for 512 x 960 and 4 images\n",
+        "  max_rows = 1\n",
+        "  max_cols = min(4, len(file_list))\n",
+        "  max_w = 0\n",
+        "  max_h = 0\n",
         "\n",
         "\n",
-        "  # create figure in inches for 768 x 768; 1344x768\n",
-        "  # if len(img_files) == 2:\n",
-        "  #   fig = plt.figure(figsize=(16, 8)) #  works for 512 x 960 and 2 images\n",
-        "  # elif len(img_files) == 4:\n",
-        "  #   fig = plt.figure(figsize=(16, 16)) #  works for 512 x 960 and 4 images\n",
-        "  # elif len(img_files) > 12:\n",
-        "  #   fig = plt.figure(figsize=(16, 16)) #  works for 512 x 960 and 4 images\n",
-        "  # else:\n",
-        "  #   fig = plt.figure(figsize=(16, 16)) #  works for 512 x 960 and 4 images\n",
+        "  for fnum, f in enumerate(file_list):\n",
+        "    img = Image.open(f)\n",
+        "    print(f\"plot_images on row {max_rows}: fnum {fnum} file: {f}\")\n",
         "\n",
-        "  # create figure in inches for  1344x768\n",
-        "  if len(img_files) == 2:\n",
-        "    fig = plt.figure(figsize=(17, 6)) #\n",
-        "  elif len(img_files) >= 4:\n",
-        "    fig = plt.figure(figsize=(14, 10)) #\n",
-        "  elif len(img_files) > 12:\n",
-        "    fig = plt.figure(figsize=(14, 10)) #\n",
-        "  else:\n",
-        "    fig = plt.figure(figsize=(16, 16)) #\n",
+        "    max_w = max(max_w, img.size[0])\n",
+        "    max_h = max(max_h, img.size[1])\n",
+        "\n",
+        "    row2imgs[max_rows].append(img)\n",
+        "    if fnum > 0 and fnum+1 % max_cols == 0:\n",
+        "      max_rows += 1\n",
+        "\n",
+        "  # print(f\"row2imgs ({max_rows}, {max_cols}): {row2imgs}\")\n",
+        "  print(f\"row2imgs ({max_rows}, {max_cols})\")\n",
+        "  print(f\"max_w: {max_w}, max_h: {max_h}\")\n",
         "\n",
         "\n",
-        "  # Adds a subplot at the 1st position\n",
-        "  try:\n",
-        "    fig.add_subplot(rows, columns, 1)\n",
-        "  except Exception as e:\n",
-        "    print(e)\n",
-        "    return\n",
+        "  grid = Image.new('RGB', size=(max_cols*max_w, max_rows*max_h))\n",
+        "  grid_w, grid_h = grid.size\n",
+        "  print(f\"grid_size: {grid.size}\")\n",
         "\n",
+        "  # use this if it the other cannot be found\n",
+        "  # font = ImageFont.load_default()\n",
+        "  font = ImageFont.truetype(r'/usr/share/fonts/truetype/liberation/LiberationMono-Regular.ttf', 35)\n",
         "\n",
-        "  if len(imgs) == len(titles):\n",
+        "  # add the line and position. inupper left\n",
+        "  draw = ImageDraw.Draw(grid)\n",
+        "\n",
+        "  if len(file_list) == len(titles):\n",
         "    add_title = True\n",
         "  else:\n",
         "    add_title = False\n",
         "\n",
-        "  for i, img in enumerate(imgs):\n",
-        "    fig.add_subplot(rows, columns, i+1)\n",
-        "    plt.imshow(img)\n",
-        "    plt.axis('off')\n",
-        "    if add_title:\n",
-        "      if title_replacements:\n",
-        "        cur_title = titles[i]\n",
-        "        for r in title_replacements:\n",
-        "          cur_title = cur_title.replace(r,'')\n",
+        "  i = 0\n",
+        "  for row, r in enumerate(row2imgs.keys()):\n",
+        "    for col, img in enumerate(row2imgs[r]):\n",
+        "      # print(f\"{row}, {col} pasting at: {row*max_w} , {col*max_h}\")\n",
+        "      grid.paste(img, box=(col*max_w, row*max_h))\n",
+        "      cur_title = \"\"\n",
+        "      if add_title:\n",
+        "        if title_replacements:\n",
+        "          cur_title = titles[i]\n",
+        "          for r in title_replacements:\n",
+        "            cur_title = cur_title.replace(r,'')\n",
+        "            cur_title = cur_title.strip()[:35]\n",
+        "        else:\n",
+        "          cur_title = titles[i][:35]\n",
+        "      i += 1\n",
         "\n",
-        "        plt.title(cur_title.strip()[:30])\n",
-        "      else:\n",
-        "        plt.title(titles[i][:30])\n",
+        "      draw.text((col*max_w +5, row*max_h+5), f\"{cur_title}\", fill='white', font=font)\n",
         "\n",
-        "  #plt.subplots_adjust(top = 0.99, bottom=0.01, hspace=0.0, wspace=0.4)\n",
-        "  fig.tight_layout(h_pad=1, w_pad=1)\n",
-        "  plt.show()\n",
+        "  if grid_h > max_height:\n",
+        "    # shrink down so all the images can be seen at once\n",
+        "    ratio = max_height / grid_h\n",
+        "    new_h = max_height\n",
+        "    new_w = int(ratio * grid_w)\n",
+        "    print(f\"resizing to ({new_w}, {new_h})\")\n",
+        "    grid = grid.resize((new_w, new_h), Image.Resampling.LANCZOS)\n",
+        "\n",
+        "  return grid\n",
+        "\n",
         "\n",
         "def remove_empty_dir(dir):\n",
         "  #remove directory if empty\n",
@@ -2974,7 +2945,6 @@
         "      pass\n",
         "\n",
         "def move_dir_files_to_path(in_path, out_path):\n",
-        "\n",
         "  input_files = [f\n",
         "               for f in map(Path, sorted(glob.glob(f\"{in_path}/*\")))\n",
         "               if f.is_file()\n",
@@ -3009,7 +2979,8 @@
         "skip_cnt = 0\n",
         "delete_cnt = 0\n",
         "\n",
-        "title_replacements = ['mother and daughter', ]\n",
+        "# if there's some repetition among the lines\n",
+        "title_replacements = []\n",
         "\n",
         "for i, sd in enumerate(review_dirs):\n",
         "  if quit:\n",
@@ -3018,19 +2989,19 @@
         "  if i % 10 == 0:\n",
         "    display.clear_output(wait=True)\n",
         "\n",
+        "  print(f\"\\n\\n ({i+1:2} / {total_dirs:3}) {accept_cnt:3}/{skip_cnt:3}/{delete_cnt:3}\\n{sd.name}\")\n",
         "  lines_to_use = get_lines_from_path(sd)\n",
         "  # titles_to_use = [lines[i][0] if type(lines[i]) == list else lines[i]  for i in lines_to_use  ]\n",
         "  titles_to_use = lines_to_use\n",
-        "\n",
-        "  print(f\"\\n\\n ({i+1:2} / {total_dirs:3}) {accept_cnt:3}/{skip_cnt:3}/{delete_cnt:3}\\n{sd.name}\")\n",
-        "\n",
         "\n",
         "  files = [\n",
         "      str(f)\n",
         "      for f in map(Path, sorted(glob.glob(f\"{sd}/*\")))\n",
         "      if f.is_file() and f.suffix in [\".jpg\", \".png\"]\n",
         "    ]\n",
-        "  plot_images(files, titles=titles_to_use, title_replacements=title_replacements)\n",
+        "\n",
+        "  grid = image_grid_list(files, titles=titles_to_use, title_replacements=title_replacements)\n",
+        "  display.display(grid)\n",
         "\n",
         "  accepted = False\n",
         "  time.sleep(6) # 8 needs at\n",
@@ -3062,8 +3033,6 @@
         "\n",
         "    except Exception as e:\n",
         "      print(e)\n",
-        "\n",
-        "\n",
         "\n"
       ]
     },
