image_grid tweaks

--- a/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
+++ b/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
@@ -2862,7 +2862,7 @@
         "  return out_titles\n",
         "\n",
         "\n",
-        "def image_grid_list(file_list, titles, max_height=720, title_replacements=[]):\n",
+        "def image_grid_list(file_list, titles, max_height=960, title_replacements=[]):\n",
         "\n",
         "  row2imgs = defaultdict(list)\n",
         "\n",
@@ -2880,13 +2880,15 @@
         "    max_h = max(max_h, img.size[1])\n",
         "\n",
         "    row2imgs[max_rows].append(img)\n",
-        "    if fnum > 0 and fnum+1 % max_cols == 0:\n",
+        "    if fnum > 0 and (fnum+1) % max_cols == 0:\n",
         "      max_rows += 1\n",
+        "\n",
+        "  if len(row2imgs[max_rows]) == 0:\n",
+        "    max_rows -= 1\n",
         "\n",
         "  # print(f\"row2imgs ({max_rows}, {max_cols}): {row2imgs}\")\n",
         "  print(f\"row2imgs ({max_rows}, {max_cols})\")\n",
         "  print(f\"max_w: {max_w}, max_h: {max_h}\")\n",
-        "\n",
         "\n",
         "  grid = Image.new('RGB', size=(max_cols*max_w, max_rows*max_h))\n",
         "  grid_w, grid_h = grid.size\n",
