Tweak random seed voting

--- a/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
+++ b/Aesthetic_Experiments_with_SDXL_txt2img.ipynb
@@ -584,7 +584,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2LyE6XGQO4nU"
+        "id": "2LyE6XGQO4nU",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -672,7 +673,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "lH9nmFJrljqo"
+        "id": "lH9nmFJrljqo",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -1190,7 +1192,8 @@
         "print(f\"adjectives ({len(adjectives)}): {adjectives}\")\n"
       ],
       "metadata": {
-        "id": "gspdJaa4JI-a"
+        "id": "gspdJaa4JI-a",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -1213,7 +1216,8 @@
         "\n"
       ],
       "metadata": {
-        "id": "NV58GJzZJNbb"
+        "id": "NV58GJzZJNbb",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -1426,7 +1430,8 @@
         "print(f\"image_qualities ({len(image_qualities)}): {image_qualities}\")\n"
       ],
       "metadata": {
-        "id": "snL9GnfAJWhN"
+        "id": "snL9GnfAJWhN",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -1545,7 +1550,8 @@
         "print(f\"negative_qualities ({len(negative_qualities)}): {negative_qualities}\")\n"
       ],
       "metadata": {
-        "id": "kl7Q_7WbJaj2"
+        "id": "kl7Q_7WbJaj2",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -1651,7 +1657,8 @@
         "\n"
       ],
       "metadata": {
-        "id": "ky4nU_-aJewj"
+        "id": "ky4nU_-aJewj",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -1673,7 +1680,8 @@
         "print(f\"shape ({len(shape)}): {shape}\")\n"
       ],
       "metadata": {
-        "id": "DhnkUV6rgVYH"
+        "id": "DhnkUV6rgVYH",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -2043,7 +2051,7 @@
         "height = 768 #@param{type:\"integer\"}\n",
         "\n",
         "#@markdown if running overnight, set this to true, so you don't waste credits\n",
-        "kill_when_done = True #@param{type:\"boolean\"}\n",
+        "kill_when_done = False #@param{type:\"boolean\"}\n",
         "\n",
         "\n",
         "def get_line_name(line_number):\n",
@@ -2560,7 +2568,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "5owwhP6kOUEf"
+        "id": "5owwhP6kOUEf",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -2808,7 +2817,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8yXzbMOBU4Cl"
+        "id": "8yXzbMOBU4Cl",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -3210,7 +3220,9 @@
         "\n",
         "#@markdown * for each line shown (3 at a time), type the number of the image you prefer\n",
         "#@markdown * e.g., `4 0 1` then Return\n",
+        "#@markdown * results are stored in `PROJECT_PATH/Sequences/SeqFinal`\n",
         "#@markdown * **NOTE:** the first time you run this, the images might not show up, just stop and start this cell again\n",
+        "#@title Choose the best images for each set (no GPU)\n",
         "\n",
         "# Go through the accepted images\n",
         "# create 10 versions of each line with a different seed\n",
@@ -3235,10 +3247,19 @@
         "InteractiveShell.ast_node_interactivity = \"all\"\n",
         "from PIL import Image, ImageFont, ImageDraw\n",
         "\n",
+        "import shutil\n",
+        "\n",
+        "#@markdown otherwise copy chosen images to SeqFinal/{timestamp}\n",
+        "just_output_seeds = False #@param{type:\"boolean\"}\n",
+        "\n",
+        "#@markdown otherwise do all dirs in SeqForReview\n",
+        "one_timestamp = \"\" #@param{type:\"string\"}\n",
+        "\n",
+        "\n",
         "\n",
         "###################\n",
         "\n",
-        "def image_grid_dict(file_dict, titles, max_height=720):\n",
+        "def image_grid_dict(file_dict, titles, max_height=960):\n",
         "  # images = []\n",
         "\n",
         "  row2imgs = defaultdict(list)\n",
@@ -3310,12 +3331,15 @@
         "#############################################\n",
         "# 1. get all the unique set names\n",
         "\n",
-        "# go through all the directories in the review path\n",
-        "initial_timestamps = list(sorted(set(\n",
-        "  str(f).split(\"_\")[0]\n",
-        "  for f in map(Path, sorted(glob.glob(f\"{sequence_review_path}/*\")))\n",
-        "  if f.is_dir()))\n",
-        ")\n",
+        "if one_timestamp:\n",
+        "  initial_timestamps = [str(sequence_review_path/ one_timestamp)]\n",
+        "else:\n",
+        "  # go through all the directories in the review path\n",
+        "  initial_timestamps = list(sorted(set(\n",
+        "    str(f).split(\"_\")[0]\n",
+        "    for f in map(Path, sorted(glob.glob(f\"{sequence_review_path}/*\")))\n",
+        "    if f.is_dir()))\n",
+        "  )\n",
         "\n",
         "print(f\"initial_timestamps {len(initial_timestamps)}: {initial_timestamps}\")\n",
         "\n",
@@ -3383,8 +3407,6 @@
         "      line2files[line].append(lf)\n",
         "      line2seed[line].append(cur_seed)\n",
         "\n",
-        "\n",
-        "\n",
         "  print()\n",
         "  total_keys_cnt = len(line2files.keys())\n",
         "  print(f\"total keys: {total_keys_cnt}: line2files: {line2files}\")\n",
@@ -3399,7 +3421,7 @@
         "    print(f\"missing lines: {each_line - cur_lines}\")\n",
         "\n",
         "\n",
-        "  # need to just approve 4 at a time\n",
+        "  # need to just approve 3 at a time\n",
         "  cur_start = 0\n",
         "\n",
         "  choices_all = []\n",
@@ -3415,18 +3437,20 @@
         "        # if we skipped some\n",
         "        continue\n",
         "      cur_file_dict[line_num].extend(line2files[line_num])\n",
-        "    # plot_images_dict(cur_file_dict, titles=None, rows=4, columns=4, )\n",
+        "\n",
         "    if len(cur_file_dict) == 0:\n",
         "      cur_start += rows_at_a_time\n",
         "      continue\n",
         "\n",
         "    print(f\"cur_file_dict: {cur_file_dict}\")\n",
         "\n",
-        "    image_grid_dict(cur_file_dict, titles=None)\n",
+        "    grid = image_grid_dict(cur_file_dict, titles=None)\n",
+        "    display.display(grid)\n",
         "\n",
         "    accepted = False\n",
         "\n",
         "    time.sleep(6) # 8 needs at\n",
+        "\n",
         "\n",
         "    # have to have this sleep for the input box to show up\n",
         "    while not accepted:\n",
@@ -3471,30 +3495,32 @@
         "    print(f\"line2seed: {line_num}: {line2chosen_seed[line_num]}\")\n",
         "\n",
         "  if choices_all and accepted_all:\n",
-        "    print(f\"init_ts: {type(init_ts)}: {init_ts}\")\n",
-        "    init_ts_dir = init_ts.split(\"/\")[-1] # this is a string\n",
-        "    move_to_dir = sequence_final_path / init_ts_dir\n",
-        "    print(f\"Saving final files to: {move_to_dir}\")\n",
+        "    if just_output_seeds:\n",
+        "      print(f\"seeds_all: {image_settings.seeds_all}\")\n",
+        "    else:\n",
         "\n",
-        "    os.makedirs(move_to_dir, exist_ok=True)\n",
-        "    setting_filename = f\"{init_ts_dir}_settings.json\"\n",
-        "    save_settings(image_settings, setting_filename, move_to_dir)\n",
+        "      print(f\"init_ts: {type(init_ts)}: {init_ts}\")\n",
+        "      init_ts_dir = init_ts.split(\"/\")[-1] # this is a string\n",
+        "      move_to_dir = sequence_final_path / init_ts_dir\n",
+        "      print(f\"Saving final files to: {move_to_dir}\")\n",
         "\n",
-        "    # get the actual file from choices\n",
-        "    for line_num, line_key in enumerate(sorted(line2files.keys())):\n",
-        "      print(f\"choices: {line_num}: {line_key}: {line2files[line_key]}\")\n",
-        "      chosen_file = line2files[line_key][int(choices_all[line_num])]\n",
-        "      new_name = \"_\".join(chosen_file.name.split(\"_\")[1:]) # get rid of the timestamp\n",
-        "      new_path = move_to_dir / new_name\n",
-        "      print(f\"choices: moving\\n\\t{chosen_file}\\n\\t{new_path}\")\n",
-        "      chosen_file.copy(new_path)\n",
+        "      os.makedirs(move_to_dir, exist_ok=True)\n",
+        "      setting_filename = f\"{init_ts_dir}_settings.json\"\n",
+        "      save_settings(image_settings, setting_filename, move_to_dir)\n",
         "\n",
+        "      # get the actual file from choices\n",
+        "      for line_num, line_key in enumerate(sorted(line2files.keys())):\n",
+        "        print(f\"choices: {line_num}: {line_key}: {line2files[line_key]}\")\n",
+        "        chosen_file = line2files[line_key][int(choices_all[line_num])]\n",
+        "        new_name = \"_\".join(chosen_file.name.split(\"_\")[1:]) # get rid of the timestamp\n",
+        "        new_path = move_to_dir / new_name\n",
+        "        print(f\"choices: copying\\n\\t{chosen_file}\\n\\t{new_path}\")\n",
+        "        shutil.copy(chosen_file, new_path)\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "bPeV1vryziKX",
-        "cellView": "form"
+        "id": "bPeV1vryziKX"
       },
       "execution_count": null,
       "outputs": []
