--- a/Aesthetic_Experiments_with_FLUX_(2024_08).ipynb
+++ b/Aesthetic_Experiments_with_FLUX_(2024_08).ipynb
@@ -20,7 +20,7 @@
         "\n",
         "https://github.com/black-forest-labs/flux\n",
         "\n",
-        "**FLUX takes only about ??? seconds per image**\n",
+        "**FLUX takes only about 14 seconds per image after 90s startup**\n",
         "\n",
         "Even on just a T4 (but with high CPU RAM).\n",
         "\n",
