--- a/Aesthetic_Experiments_with_FLUX_(2024_08).ipynb
+++ b/Aesthetic_Experiments_with_FLUX_(2024_08).ipynb
@@ -16,7 +16,7 @@
         "id": "ByGXyiHZWM_q"
       },
       "source": [
-        "# **Aesthetic Experiments with FLUX (Schnell) txt2img**\n",
+        "# **Aesthetic Experiments with FLUX (Schnell) txt2img (requires A100:: 26 Gb of GPU)**\n",
         "\n",
         "https://github.com/black-forest-labs/flux\n",
         "\n",
