--- a/Aesthetic_Experiments_with_FLUX_(2024_08).ipynb
+++ b/Aesthetic_Experiments_with_FLUX_(2024_08).ipynb
@@ -16,13 +16,13 @@
         "id": "ByGXyiHZWM_q"
       },
       "source": [
-        "# **Aesthetic Experiments with FLUX (Schnell) txt2img (requires A100:: 26 Gb of GPU)**\n",
+        "# **Aesthetic Experiments with FLUX (Schnell) txt2img **\n",
+        "\n",
+        "**Requires A100: about 26 Gb of GPU**\n",
         "\n",
         "https://github.com/black-forest-labs/flux\n",
         "\n",
         "**FLUX takes only about 14 seconds per image after 90s startup**\n",
-        "\n",
-        "Even on just a T4 (but with high CPU RAM).\n",
         "\n",
         "The goal of this notebook is to allow the user to explore and hone in on a set of prompts that will work for a wide variety of scenes.  \n",
         "\n",
