--- a/Aesthetic_Experiments_with_FLUX_(2024_08).ipynb
+++ b/Aesthetic_Experiments_with_FLUX_(2024_08).ipynb
@@ -254,20 +254,19 @@
         "from diffusers import FluxPipeline\n",
         "\n",
         "model_id = \"black-forest-labs/FLUX.1-schnell\" #you can also use `black-forest-labs/FLUX.1-dev`\n",
+        "# for schnell:\n",
+        "pipe_steps=4\n",
         "\n",
-        "pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-schnell\", torch_dtype=torch.bfloat16)\n",
+        "pipe = FluxPipeline.from_pretrained(model_id, torch_dtype=torch.bfloat16)\n",
         "pipe.enable_model_cpu_offload() # really need this.  save some VRAM by offloading the model to CPU. Remove this if you have enough GPU power\n",
         "\n",
-        "# pipe.enable_sequential_cpu_offload() # really slow\n",
+        "# pipe.enable_sequential_cpu_offload() # really slow, but can run on small GPU\n",
         "\n",
         "# needs 26Gb with or without, but a little quicker to start up and still 14s\n",
         "pipe.vae.enable_slicing() #\n",
-        "pipe.vae.enable_tiling() # A100 needed 3min startup 14s after that\n",
+        "pipe.vae.enable_tiling() #\n",
         "\n",
-        "\n",
-        "\n",
-        "# for schnell:\n",
-        "pipe_steps=4\n"
+        "\n"
       ]
     },
     {
